--- a/_data/data.yml
+++ b/_data/data.yml
@@ -17,6 +17,7 @@ sidebar:
     timezone:
     citizenship:
     website: www.energy-alternatives.eu #do not add http://
+    website3: www.robingirard.eu/StudentList.html #do not add http://
     linkedin: robin-girard-a88baa4
     xing:
     github: robingirard
