--- a/_data/data.yml
+++ b/_data/data.yml
@@ -58,7 +58,7 @@ career-profile:
           Energy and processes department
           PERSEE Center: Center for Processes, Renewables Energies and Energy Systems
           <a href="https://www.persee.minesparis.psl.eu/Recherche/Groupe-ERSEI/"> ERSEI group </a>
-          10 PhD students already defended under my supervision or co-supervision, 9 on-going PhD under my direction, 4 ongoing postdocs under my direction (see <a href="https://www.robingirard.eu/#Current"> below </a>).
+          12 PhD students already defended under my supervision or co-supervision, 7 on-going PhD under my direction, 2 ongoing postdocs under my direction (see <a href="https://www.robingirard.eu/#Current"> below </a>).
       - role: <b>   Research topics </b> - Net zero transition modeling.
         details: |
           - Energy demand modeling - Temporal and spatial demand modeling, building retrofits at the territory scale, evolution of heating, low carbon industry, role of hydrogen.
@@ -67,7 +67,7 @@ career-profile:
           - Energy markets - Market price dynamic modeling. Regulation and actor modeling.
       - role: <b>  Teaching activities</b>
         details: |
-          - Deputy head of Energy Major for "cycle ingénieur civil" of MINES Paris PSL. Around 30 students every year. Head of Energy Major is my colleague <a href="https://www.minesparis.psl.eu/Services/Annuaire/bruno-duplessis." target="_blank" rel="nofollow">Bruno Duplessis </a>
+          - Head of Energy Major with my colleague <a href="https://www.minesparis.psl.eu/Services/Annuaire/bruno-duplessis." target="_blank" rel="nofollow">Bruno Duplessis </a> for "cycle ingénieur civil" of MINES Paris PSL. Around 30 students every year.
           - Head of <a href="https://www.persee.minesparis.psl.eu/Formation/CTE/#:~:text=Le%20PESTO%2DEnergie%20(Programme%20d,%2C%20Production%2C%20Stockage%20et%20Transport" target="_blank" res="nofollow"> PESTO Energy Transition.</a> Six weeks of courses, projects, visits and conferences for students of <a href="https://fr.wikipedia.org/wiki/Corps_des_mines" target="_blank" rel="nofollow">le Corps des mines </a>
           - Head of <a href="https://www.robingirard.eu/MINES-UE14-miniprojet.html" target="_blank" rel="nofollow"> "mini-projets de l’UE-14"  </a> du cycle ingénieurs civils. Energy-climate projects for 1st year students (list of past year projects available on the link).
           - <a href="https://executive-education.minesparis.psl.eu/formations/evolution-du-systeme-electrique-dans-un-contexte-de-transition-energetique/"  target="_blank" rel="nofollow">  Evolution du système électrique dans un contexte de transition énergétique. </a> One week course+practical work (available for MINES Paris PSL students but also to external)
@@ -94,26 +94,14 @@ education:
 career-profile_2:
     title: Current students (Postdoc and PhD students)
     info:
+      - role: <a href="https://www.linkedin.com/in/olena-pechak-24b215298">  Olena Pechak </a> - Postdoc -
+        time: 18 months - Since January 2025
+        details: |
+          E-fuel developpement in the EU. Postdoc funded by <a href ="https://www.lereseaudescarnot.fr/fr"> CARNOT </a>.
       - role: <a href="https://www.linkedin.com/in/julie-perrin-147414188/">  Julie Perrin </a> - Postdoc -
-        time: 2 years starting February 2023
+        time: Since February 2023
         details: |
-           Joined coordination with <a href ="https://www.csi.minesparis.psl.eu/equipe/chercheurs-associes/daniel-florentin/"> Daniel Florentin</a>. From political targets to deployment of thermal retrofit, identification of institutional limits to thermal retrofits. Postdoc funded by <a href ="https://the-transition-institute.minesparis.psl.eu/"> TTI.5 </a>.
-      - role: <a href="https://www.robingirard.eu/StudentList.html#QuentinRaillard-Cazanove"> Quentin Raillard-Cazanove </a>  - Postdoc -
-        time: Since 2025
-        details: |
-           Modeling of industry decarbonation and its impact on the electric system. Funded by  <a href ="https://www.carnot-mines.eu/fr"> Institut Carnot MINES</a>.
-      - role: <a href="https://www.robingirard.eu/StudentList.html#OwenPalmer">  Owen Palmer  </a> - PhD student -
-        time: Since May 2022
-        details: |
-           Optimisation of decision making for PV+hydrogen+storage projects. CIFRE PhD funded by <a href ="https://verso.energy/"> Verso Energy</a>.
-      - role: <a href="https://www.robingirard.eu/StudentList.html#MaximeVrain"> Maxime Vrain  </a> - PhD student -
-        time: Since October 2022
-        details: |
-           Vectors coupling in the 2050 european energy system. CIFRE PhD funded by french TSO <a href="https://www.rte-france.com/"> RTE</a>.
-      - role: <a href="https://www.robingirard.eu/StudentList.html#ThibaultGoessel"> Thibault Goessel </a>  - PhD student -
-        time: Since November 2022
-        details: |
-           LCA of building renovation toward carbon neutrality. PhD funded by <a href="http://www.cstb.fr/fr/"> CSTB</a>.
+           Joined coordination with <a href ="https://latts.fr/membres/daniel-florentin/"> Daniel Florentin</a>. From political targets to deployment of thermal retrofit, identification of institutional limits to thermal retrofits. Postdoc funded by <a href ="https://the-transition-institute.minesparis.psl.eu/"> TTI.5 </a>.
       - role: <a href="https://www.robingirard.eu/StudentList.html#LaurentCornaggia"> Laurent Cornaggia  </a> - PhD student -
         time: Since January 2023
         details: |
@@ -134,6 +122,14 @@ career-profile_2:
         time: Since November 2024
         details: |
            Integrating CO2 resources into territorial energy planning.
+      - role: <a href="https://www.linkedin.com/in/sarah-l-3baa3099/">  Sarah Lagrancourd  </a> - PhD student -
+        time: Since October 2025
+        details: |
+           Optimisation of decarbonisation trajectory for a group of buildings - PhD funded by CSTB and ADEME.
+      - role: <a href="https://www.linkedin.com/in/clara-lemaitre/">  Clara Lemaitre </a> - PhD student -
+        time: Since December 2025
+        details: |
+           Methodology for modelling and calibrating electrical load curves for multi-scale building stock for the evaluation of renovation and flexibility scenarios. CIFRE PhD funded by french TSO <a href="https://www.rte-france.com/"> RTE</a> and CSTB.
 
 career-profile_3:
     title: Available or upcomming positions.
@@ -159,14 +155,14 @@ publications:
       - title:  Optimal operational planning of hybrid power plants in railway MVDC networks and comparison with standard AC connections
         authors: Laurent Cornaggia, Robin Girard, Olivier Despouys, Helene Clemot, Panagiotis Andrianesis
 
-      - title: Hedging Hydrogen-  Planning and Contracting Under Uncertainty for a Green Hydrogen Producer
-        authors: Owen Palmer, Hugo Radet, Simon Camal, Jalal Kazempour, Robin Girard
+      - title: A scalable activity-based and physics-informed bottom-up model for residential electricity demand using open data
+        authors: Yoann Chiche, Yassine Abdelouadoud, Anna Cocchi, Robin Girard
 
-      - title: Integrating Life Cycle Sustainability Assessment into Building Renovation Strategies
-        authors: Goessel Thibault, Ligier Simon, Girard Robin
+      - title: Resilience analysis for energy foresight scenarios - addressing the deep uncertainties of hydrogen deployment in industrial hubs.
+        authors: Anaëlle Jodry, Quentin RAILLARD--CAZANOVE, Thibaut KNIBIEHLY, Pedro AFFONSO NÓBREGA, Robin Girard
 
-      - title: Modelling district heating networks in large-scale multi-energy simulations
-        authors: Maxime Vrain, Virginie Dussartre, Nicolas Lhuillier, Girard Robin
+      - title: An integrated model coupling framework for adequacy-constrained planning of energy systems - A case study of the European power system towards 2050
+        authors: Hugo Hamburger, Thomas Heggarty, Panagiotis Andrianesis, Robin Girard
 
 
 
