--- a/_data/data.yml
+++ b/_data/data.yml
@@ -114,22 +114,22 @@ career-profile_2:
         time: Since September 2023
         details: |
            Coupling optimisation methodology for energy system planning. PhD funded by the PlaneTerr project, in collaboration with several french energy system compagnies.
-      - role: <a href="https://www.linkedin.com/in/yoann-chiche-05814114a/">  Yoann Chiche  </a> - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html#YoannChiche">  Yoann Chiche  </a> - PhD student -
         time: Since September 2024
         details: |
            Coupling of Smart Grids Between Transmission and Distribution Networks
-      - role: <a href="https://www.linkedin.com/in/maria-berchiche-10480218a/">  Maria Berchiche  </a> - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html#MariaBerchiche">  Maria Berchiche  </a> - PhD student -
         time: Since November 2024
         details: |
-           Integrating CO2 resources into territorial energy planning.
-      - role: <a href="https://www.linkedin.com/in/sarah-l-3baa3099/">  Sarah Lagrancourd  </a> - PhD student -
+           Integrating CO2 resources into territorial energy planning
+      - role: <a href="https://www.robingirard.eu/StudentList.html#SarahLagrandcourd">  Sarah Lagrancourd  </a> - PhD student -
         time: Since October 2025
         details: |
            Optimisation of decarbonisation trajectory for a group of buildings - PhD funded by CSTB and ADEME.
-      - role: <a href="https://www.linkedin.com/in/clara-lemaitre/">  Clara Lemaitre </a> - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html#ClaraLemaitre">  Clara Lemaitre </a> - PhD student -
         time: Since December 2025
         details: |
-           Methodology for modelling and calibrating electrical load curves for multi-scale building stock for the evaluation of renovation and flexibility scenarios. CIFRE PhD funded by french TSO <a href="https://www.rte-france.com/"> RTE</a> and CSTB.
+           Methodology for modelling and calibrating electrical load curves for multi-scale building stock for the evaluation of renovation and flexibility scenarios. CIFRE PhD funded by french TSO <a href="https://www.rte-france.com/"> RTE </a> and CSTB.
 
 career-profile_3:
     title: Available or upcomming positions.
