mise à jour janvier 2026

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -122,7 +122,7 @@ career-profile_2:
         time: Since November 2024
         details: |
            Integrating CO2 resources into territorial energy planning
-      - role: <a href="https://www.robingirard.eu/StudentList.html#SarahLagrandcourd">  Sarah Lagrancourd  </a> - PhD student -
+      - role: <a href="https://www.robingirard.eu/StudentList.html#SarahLagrandcourt">  Sarah Lagrancourt  </a> - PhD student -
         time: Since October 2025
         details: |
            Optimisation of decarbonisation trajectory for a group of buildings - PhD funded by CSTB and ADEME.
